Configuracao inicial do projeto

--- a/HealthCareApp/HealthCareApp/App.xaml
+++ b/HealthCareApp/HealthCareApp/App.xaml
@@ -6,6 +6,8 @@
              mc:Ignorable="d"
              x:Class="HealthCareApp.App">
     <Application.Resources>
-        
+        <ResourceDictionary>
+            <ResourceDictionary Source="/Styles/LightTheme.xaml" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
